Fixes needed to enable ProtoNN emitted code to work Fixes needed to enable ProtoNN emitted code to work
This makes a number of changes needed to make the ProtoNN trainer create a model that can be compiled and run on a target device:
* Appends an OutputNode to the `ProtoNNPredictorNode`
* Appends an OutputNode to the model created by `protoNNTrainer`
* Switches every instance of emitting a store of a constant literal of 0 using LLVM to use the newly add `StoreZero` member function
* Fixes `StoreZero` member function to handle variables that are pointers correctly

Additionally, it adds the following tests to `model_compiler_test`
* `TestSqEuclideanDistanceMap`
* `TestProtoNNPredictorMap`
* `TestCompilableUnaryOperation_square_Node`
* `TestL2NormSquaredNodeCompiled`
* `TestMatrixVectorProductNodeCompile`

There is also an ancillary change that fixes the C++ `CMakeLists.txt` template for `wrap.py`.

Story 808: ProtoNN: enable ProtoNN emitted code to work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,9 @@ if(CMAKE_CONFIGURATION_TYPES)
   set(CMAKE_MODULE_LINKER_FLAGS_DOCUMENTATION ${CMAKE_MODULE_LINKER_FLAGS_RELEASE})
 endif()
 
+# Try to create a compilation database
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 # Options
 # To set an option:
 # cmake -DMyOption=ON|OFF buildDirectory
