--- a/interfaces/javascript/ell_module/CMakeLists.txt
+++ b/interfaces/javascript/ell_module/CMakeLists.txt
@@ -1,43 +1,44 @@
 #
 # Build node module
-# 
+#
 
 # Exports the following global variables
-# 
+#
 # MODULE_INTERFACE_SRC
 # MODULE_BLAS_LIBS
 # MODULE_LLVM_LIBS
 # MODULE_BUILD_COMMAND
 #
 
-set (module_name ell_module)
+set(module_name ell_module)
 
-set (module_files 
-    binding.gyp
-    buildme
-    buildme.cmd
-    copyMacLib.sh
-    copyLinuxLib.sh
-    copyWindowsLib.cmd
-    ell_manual.d.ts
-    index.d.ts
-    index.js
-    package.json
-    README.md)
+set(module_files
+    templates/binding.gyp
+    templates/buildme
+    templates/buildme.cmd
+    templates/copyMacLib.sh
+    templates/copyLinuxLib.sh
+    templates/copyWindowsLib.cmd
+    templates/ell_manual.d.ts
+    templates/index.d.ts
+    templates/index.js
+    templates/package.json
+    templates/README.md
+)
 
-set (NODE_ABI_VERSION 50)
-set (ELECTRON_VERSION 1.4.4)
+set(NODE_ABI_VERSION 50)
+set(ELECTRON_VERSION 1.4.4)
 
 find_program(NPM_EXECUTABLE npm)
 if(NPM_EXECUTABLE)
     message(STATUS "Found npm at ${NPM_EXECUTABLE}")
 
     if(WIN32)
-        set (MODULE_BUILD_COMMAND build:win)
+        set(MODULE_BUILD_COMMAND build:win)
     elseif(APPLE)
-        set (MODULE_BUILD_COMMAND build:mac)
+        set(MODULE_BUILD_COMMAND build:mac)
     elseif(UNIX)
-        set (MODULE_BUILD_COMMAND build:linux)
+        set(MODULE_BUILD_COMMAND build:linux)
     endif()
 
     add_custom_target(${module_name}_files
@@ -83,8 +84,9 @@ if(NPM_EXECUTABLE)
     endforeach()
     string(CONCAT MODULE_INTERFACE_SRC ${MODULE_INTERFACE_SRC})
 
-    foreach(module_file ${module_files})
-        configure_file(${module_file} ${module_file} @ONLY)
+    foreach(module_file_template ${module_files})
+        get_filename_component(module_file ${module_file_template} NAME)
+        configure_file(${module_file_template} ${module_file} @ONLY)
         set_property(TARGET ${module_name}_files APPEND PROPERTY OBJECT_DEPENDS ${module_file})
     endforeach()
 
@@ -96,20 +98,20 @@ endif()
 find_program(NODE_EXECUTABLE node)
 if(NPM_EXECUTABLE AND NODE_EXECUTABLE)
     # set up environment for test
-    add_custom_command(TARGET ${module_name} 
+    add_custom_command(TARGET ${module_name}
                     POST_BUILD
-                    COMMAND ${NPM_EXECUTABLE} install 
+                    COMMAND ${NPM_EXECUTABLE} install
                     WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/test/js
                     VERBATIM)
 
-    add_custom_command(TARGET ${module_name} 
+    add_custom_command(TARGET ${module_name}
                     POST_BUILD
                     COMMAND ${NPM_EXECUTABLE} install ell
                     WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/test/js
                     VERBATIM)
 
     # add test
-    set (test_name ${module_name}_test)
+    set(test_name ${module_name}_test)
     add_test(NAME ${test_name}
             COMMAND ${NODE_EXECUTABLE} TestCompiler.js
             WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/test/js )
