--- a/tools/wrap/templates/CMakeLists.cpp.txt.in
+++ b/tools/wrap/templates/CMakeLists.cpp.txt.in
@@ -36,7 +36,7 @@ include(OpenBLASSetup.cmake)
 
 add_library(@ELL_model@ STATIC IMPORTED GLOBAL)
 
-set_property(TARGET model APPEND PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR};${CMAKE_CURRENT_SOURCE_DIR}/include")
+set_property(TARGET @ELL_model@ APPEND PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR};${CMAKE_CURRENT_SOURCE_DIR}/include")
 set_target_properties(@ELL_model@ PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/@ELL_model@.@OBJECT_EXTENSION@)
 if(BLAS_LIBS)
     target_link_libraries(@ELL_model@ INTERFACE ${BLAS_LIBS})
