Story 1012: Clean compiler warnings from nodes library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,8 @@ if(CMAKE_CONFIGURATION_TYPES)
   set(CMAKE_MODULE_LINKER_FLAGS_DOCUMENTATION ${CMAKE_MODULE_LINKER_FLAGS_RELEASE})
 endif()
 
-# Try to create a compilation database
+# Try to create a compilation database, which is useful to have when working
+# with clang tooling
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Options
@@ -83,13 +84,6 @@ if(EXISTS ${CMAKE_SOURCE_DIR}/private AND EXISTS ${CMAKE_SOURCE_DIR}/private/CMa
   add_subdirectory(private)
 endif()
 
-string(TOLOWER "${CMAKE_BUILD_TYPE}" lower_CMAKE_BUILD_TYPE)
-
-if(lower_CMAKE_BUILD_TYPE STREQUAL "debug")
-  add_definitions(-DELL_DEBUG)
-endif()
-
-# Add SWIG-generated interfaces
 include(CommonInterfaces)
 add_subdirectory(interfaces)
 
