Story 1079: Enable /WX and -Werror Story 1079: Enable /WX and -Werror
Tested with debug and release configurations on the following:
* clang-4.0.0
* clang-5.0.1
* gcc-6.3
* MSVC 2017 15.4.1
Related work items: #1079

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,10 +49,10 @@ if(MSVC)
   add_definitions(-DUNICODE)
   add_compile_options(/MP)
   add_compile_options(/bigobj)
-  add_compile_options(/W4)
+  add_compile_options(/W4 /WX)
 else()
   # Set Clang/GCC-specific options
-  add_compile_options(-Wall)
+  add_compile_options(-Wall -Werror)
   add_compile_options(-Wno-missing-braces)
   add_compile_options(-Wmissing-field-initializers)
   add_compile_options(-fvisibility-inlines-hidden)
