--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,10 @@ services:
 install:
   - export TRAVIS_REPO_OWNER=${TRAVIS_REPO_SLUG%/*}
   - export TRAVIS_REPO_NAME=${TRAVIS_REPO_SLUG#*/}
-  - docker build -t microsoft/ell:latest --build-arg branch=$TRAVIS_PULL_REQUEST_BRANCH --build-arg repo=https://github.com/$TRAVIS_REPO_OWNER/ELL.git .
+  - export REPO=https://github.com/$TRAVIS_REPO_OWNER/ELL.git
+  - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
+  - echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, PR=$PR, BRANCH=$BRANCH"  
+  - docker build -t microsoft/ell:latest --build-arg branch=$BRANCH --build-arg repo=$REPO .
 
 script:
   # hack to install openmpi because docker runs out of memory
