Add tensor support to emitters

--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -53,6 +53,7 @@ set(include
   include/IIterator.h
   include/IndentedTextWriter.h
   include/IntegerList.h
+  include/IntegerNArray.h
   include/IntegerStack.h
   include/JsonArchiver.h
   include/Logger.h
