--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ install:
   - docker pull $DOCKERHUB_ACCOUNT/ell-build:latest
 
 script:
-  - docker run -v $TRAVIS_BUILD_DIR:/ELL -it $DOCKERHUB_ACCOUNT/ell-build:latest /bin/sh -c 'cd /ELL; ./build.sh build 1; cd build; ctest -VV'
+  - docker run -v $TRAVIS_BUILD_DIR:/ELL -it $DOCKERHUB_ACCOUNT/ell-build:latest /bin/sh -c 'cd /ELL; ./build.sh build 1; cd build; ctest ctest -DGIT_REPO=https://github.com/Microsoft/ell-test-models.git -VV'
