Value view type operators shouldn't be invoked for non-Value expressions Value library view types have implicit ctors which was causing operator overloads (specifically for `Scalar`) to be invoked even when both sides of the operator were not types that were Value related because both values were being automatically converted and thus invoking the View type operator. The fix is to make all operator overloads private friends.

--- a/libraries/nodes/CMakeLists.txt
+++ b/libraries/nodes/CMakeLists.txt
@@ -244,7 +244,12 @@ add_dependencies(${test_name} dspDataFiles)
 
 copy_shared_libraries(${test_name})
 
-set_property(TARGET ${test_name} PROPERTY FOLDER "tests")
+set_target_properties(
+    ${test_name}
+    PROPERTIES
+        FOLDER "tests"
+        ENABLE_EXPORTS ON
+)
 
 add_test(NAME ${test_name} COMMAND ${test_name})
 set_test_library_path(${test_name})
